# EAG-V3-Week-8

./: Dockerfile  README.md  agent_config.yaml  agent_routing.yaml  app.py  docker-compose.yml  pyproject.toml  usage.json
cognitive_dag/: __init__.py  action.py  agent.py  catalog.py  dag_schemas.py  decision.py  flow.py  gateway_client.py  graph_viz.py  indexing.py  mcp_server.py  perception.py  persistence.py  recovery.py  search_providers.py  skills.py
corpus/: BASE_QUERIES.json  QUERY_SPEC.json  papers_catalog.json
corpus/dag/: ASSIGNMENT.json
docs/: ASSIGNMENT.md  DEFERRALS.md
prompts/: browser.md  planner.md  researcher.md
runs/: eval_suite.py
sandbox/rag_corpus/: 14_design_deferrals.md
scripts/: check_submission.py  clean.py  download_research_papers.py  extract_traces.py  index_research_corpus.py
scripts/dag/: analyze_session_timing.py  run_eval.py  run_query.py
static/: dag-graph.js
templates/: index.html
tests/: test_architecture.py  test_assignment_spec.py  test_custom_queries.py  test_dag_agent_ui.py  test_dag_flow.py  test_dag_llm_client.py  test_dag_mcp_tools.py  test_dag_queries_api.py  test_dag_resume_api.py  test_dag_web_fetch.py  test_deferrals.py  test_document_ingest.py  test_graph_viz.py  test_heuristic_tool.py  test_indexing_async.py  test_iteration_logs.py  test_llm_env.py  test_llm_retry.py  test_paths_and_guards.py  test_recovery.py  test_sandbox.py  test_submission_spec.py  test_worked_queries.py
